@@ -4,6 +4,7 @@ $Id$
 	The colorclass command is added, to make colorization easy
 	Handle MIT Athena OLC zephyrs correctly
 	Updated ktools website / bug address
+	Do ntohs() when printing zephyr port in zephyr info
 	
 2.1.6
         Fixed three bugs found by Valgrind.
